2003-11-15 arne

	***************
	*** WARNING ***
	***************
	existing code need to be changed !!!
	You need to change your CView::mouse methods to add the buttons parameter and your calls to CDrawContext::getMouseLocation inside CViews should be changed to call CView::getMouseLocation instead.
	***************
	
	* fixed the CViewContainer stuff with Quartz.
		NOTE :	I had to change the way how the view can get the current mouse location. It has to ask itself now as the CView class can 
				check if it is embedded into a CViewContainer which the CDrawDevice couldn't.
	* all mouse methods get another parameter: long buttons

	Mac Only:
	* changed the drag and drop stuff for Carbon Events
	* With CARBON_EVENTS == 1, CFrame acts now like a Mac Toolbox Control. It works even on compositing enabled windows and on non left-top positions. 

2003-11-12 arne

	* Bugfix for CFrame::setSize for hosts which support "audioMasterSizeWindow" submitted by Justus Henkmann (TC Works)

2003-10-10 arne
	
	* Bugfix for COptionMenu::addEntry submitted by Nicolas Bronnec

2003-09-18 arne

	* incorporated Marc Poirier's CTextEdit fixes
	* quartz: bugfix in drawString, set cliprect so that the text won't draw outside
	* carbon events: some code cleanup

2003-09-17 arne

	* Added Carbon Events handling (#define CARBON_EVENTS 1)
	* Implemented QUARTZ drawing. (#define QUARTZ 1)
	* CSlider doesn't use a COffscreenContext for drawing on MacOSX anymore

	Quartz Notes:
		- Not all graphic operations we use in vstgui have an equivalent in quartz.
			Currently unsupported are : 
				- all drawing modes except kCopyMode
				- getPoint ()
				_ floodFill ()
				- copy from Screen to Offscreen

		- to support alpha drawing on all operations I have made changes to CColor. The 4th variable is now the alpha value where 255 is opaque and 0 is transparent.